--- a/src/components/todoitem.module.css
+++ b/src/components/todoitem.module.css
@@ -8,3 +8,23 @@
 .complete {
     text-decoration: line-through;
 }
+
+.itemName {
+    font-weight: bold;
+    padding: 20px;
+}
+
+.line {
+    border: 1px solid #f4f4f4;
+}
+
+.deleteButton {
+    float: right;
+    padding: 12px 20px;
+    border: none;
+    background-color: rgb(98, 122, 233);
+    color: white;
+    margin-top: -5px;
+    border-radius: 4px;
+    cursor: pointer;
+}
